# republica_facil_backend

./: .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 064b9edc8cdd_create_table_quarto.py  3472ae806241_create_attribute_telephone.py  3980feb29c47_add_ativo_and_data_saida_to_membro.py  5388b624ef37_make_membro_quarto_id_nullable.py  6d69eea999b8_create_postgres1.py  90b712e2d40c_add_updated_at_field_to_users_table.py  a80b8cbc182e_update_despesa.py  bca6842a041d_remove_unique_constraints_from_membro.py  cae4c1fad206_create_table_user.py  e53b17c721ac_update_table_republica.py  febc04867792_create_users_table.py
republica_facil/: app.py  conftest.py  database.py  main.py  security.py  settings.py  test_db.py  test_integration.py  test_parametrized.py
republica_facil/autenticacao/: email.html  repository.py  router.py  schema.py  service.py  test_autenticacao.py
republica_facil/despesas/: router.py  schema.py  test_despesas.py
republica_facil/membros/: router.py  schema.py  test_membros.py
republica_facil/model/: models.py
republica_facil/quartos/: router.py  schema.py  test_quartos.py
republica_facil/republicas/: repository.py  router.py  schema.py  test_republicas.py
republica_facil/tests/: conftest.py  test_app.py
republica_facil/user/: controller.py  repository.py  service.py
republica_facil/usuarios/: repository.py  router.py  schema.py  service.py  test_users.py  test_usuarios.py
tests/: conftest.py  test_db.py
